--- a/my-app/src/css/Dashboard.css
+++ b/my-app/src/css/Dashboard.css
@@ -189,16 +189,9 @@ h3 { font-size: 1.8rem; border-bottom: 2px solid #f25a17; display: inline-block;
   }
 }
 
-/* --- Main Content Area (White Background) --- */
-.main-content {
-  max-width: 1000px;
-  margin: 60px auto;
-  padding: 0 20px;
-}
-
 /* --- Teaching Section Layout --- */
 .teaching-section {
-  padding: 80px 20px;
+  padding: 1px 10px;
   background-color: #ffffff; /* Clean white background */
   max-width: 1100px;
   margin: 0 auto;
@@ -307,6 +300,13 @@ h3 { font-size: 1.8rem; border-bottom: 2px solid #f25a17; display: inline-block;
   }
 }
 
+/* --- Main Content Area (White Background) --- */
+.main-content {
+  max-width: 1000px;
+  margin: 60px auto;
+  padding: 0 20px;
+}
+
 /* --- Services Section Layout --- */
 .services-container {
   display: flex;
@@ -315,6 +315,7 @@ h3 { font-size: 1.8rem; border-bottom: 2px solid #f25a17; display: inline-block;
   gap: 50px;
   background-color: #f9f9f9; /* Light grey background for separation */
   padding: 40px;
+  margin-top: 80px;
   border-radius: 12px;
   border-left: 5px solid rgb(81, 93, 211);
 }
@@ -352,12 +353,14 @@ h3 { font-size: 1.8rem; border-bottom: 2px solid #f25a17; display: inline-block;
 /* --- Hero Bio Section --- */
 .hero-bio {
   padding: 40px;
-  border-radius: 12px; /* Smooth corners */
+  border-radius: 6px; /* Smooth corners */
   max-width: 800px;    /* Prevents text from stretching too wide */
   margin: 0 auto;      /* Centers the block if it's the only thing */
-  
+  background-color: #202020;
+  opacity: 0.9;
+
   /* Text Styling */
-  color: #e6e6e6;      /* Light Grey/White for paragraph text (High Contrast) */
+  color: white;      /* Light Grey/White for paragraph text (High Contrast) */
   line-height: 1.8;    /* Improves readability of long text */
 }
 
@@ -368,10 +371,21 @@ h3 { font-size: 1.8rem; border-bottom: 2px solid #f25a17; display: inline-block;
   margin-top: 0;
   margin-bottom: 20px;
   letter-spacing: 1px;
-  border-bottom: 3px solid #f25a17; /* Keeps your orange accent theme */
   display: inline-block;
 }
 
+/* Style for the text link */
+.text-link {
+  text-decoration: none;
+  font-weight: bold;
+  border-bottom: 1px solid transparent;
+  transition: all 0.2s ease;
+}
+
+.text-link:hover {
+  color: #d94e10; /* Darker orange on hover */
+  border-bottom: 1px solid #d94e10; /* Adds an underline on hover */
+}
 
 /* --- University Logo Styling --- */
 .logo-container {
@@ -382,7 +396,6 @@ h3 { font-size: 1.8rem; border-bottom: 2px solid #f25a17; display: inline-block;
   margin-top: 30px;
 }
 
-/* Optional: Ensure they don't look too big when stacked */
 .uni-logo {
   height: 180px; 
   width: auto;
