--- a/my-app/src/css/Services.css
+++ b/my-app/src/css/Services.css
@@ -17,12 +17,11 @@
 }
 
 .page-intro {
-  text-align: center;
-  max-width: 800px;
-  margin: 0 auto 60px auto;
-  font-size: 1.15rem;
-  line-height: 1.6;
-  color: #555;
+    font-size: 1.2rem;
+    text-align: center;
+    color: #4a5568;
+    margin-bottom: 60px;
+    font-weight: 300;
 }
 
 .page-intro strong {
