--- a/my-app/src/css/Contact.css
+++ b/my-app/src/css/Contact.css
@@ -114,7 +114,7 @@
   text-transform: uppercase;
   color: white;
   background: linear-gradient(135deg, rgb(81, 93, 211) 0%, rgba(81, 93, 211, 0.85) 100%);
-  border: 2px solid #ffffff;
+  border: 2px solid #c97b14;
   border-radius: 8px;
   cursor: pointer;
   transition: all 0.3s ease;
